<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="content_main_title">My Nanodegree Apps</string>

    <string name="popular_movies">popular movies</string>
    <string name="scores_app">scores app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone_my_own_app">capstone: my own app</string>

    <string name="popular_movies_toast">This button will launch my Popular Movies app!</string>
    <string name="scores_app_toast">This button will launch my Scores app!</string>
    <string name="library_app_toast">This button will launch my Library app!</string>
    <string name="build_it_bigger_toast">This button will launch my Build It Bigger app!</string>
    <string name="xyz_reader_toast">This button will launch my XYZ Reader app!</string>
    <string name="capstone_my_own_app_toast">This button will launch my Capstone app!</string>
</resources>
