<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/content_main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                style="@style/AppTheme.Main.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onPopularMoviesPressed"
                android:text="@string/popular_movies"/>

            <Button
                style="@style/AppTheme.Main.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onScoresAppPressed"
                android:text="@string/scores_app"/>

            <Button
                android:id="@+id/button3"
                style="@style/AppTheme.Main.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onLibraryAppPressed"
                android:text="@string/library_app"/>

            <Button
                android:id="@+id/button4"
                style="@style/AppTheme.Main.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onBuildItBiggerPressed"
                android:text="@string/build_it_bigger"/>

            <Button
                android:id="@+id/button5"
                style="@style/AppTheme.Main.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onReaderPressed"
                android:text="@string/xyz_reader"/>

            <Button
                android:id="@+id/button6"
                style="@style/AppTheme.Main.Button.Special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onCapstonePressed"
                android:text="@string/capstone_my_own_app"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
